5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1773_2103.log
== TEST (2019-05-23 22:14:12) 
-- CODE:
from math import*
x=array(eval(input("Digite um vetor: ")))
i=-1
while(i>=-len(x)):
	y=y+x[i]
	i=i-1
print(y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:14:24) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=-1
while(i>=-len(x)):
	y=y+x[i]
	i=i-1
print(y)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:19:45) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
if(len(x)%2==0):
	while(len(x)>h):
		x[i]=x[u]
		h=h+1
		i=i+1
		u=u-1
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:20:02) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
if(len(x)%2==0):
	while(len(x)>h):
		x[i]=x[u]
		h=h+1
		i=i+1
		u=u-1
		
print(x)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:21:09) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
if(len(x)%2==0):
	while(len(x)>h):
		x[i]=x[u]
		x[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
		
print(x)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:22:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
		
print(x)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:22:46) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
		
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:23:04) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
		
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:23:17) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
		
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:27:11) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	while((x//2)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:27:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	while((len(x)//2)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:28:34) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	while((len(x)//2)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:29:34) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	while((len(x)//2)>h):
		m[i]=x[u]
		m[u]=x[i]
		m[len(x)]=x[len(x)//2]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:31:07) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:31:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
print(m)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:34:57) 
-- CODE:
from numpy import*
y=array(eval(input("Digtie um vetor: ")))
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
t=0		
while((len(x))>t):
	if(x[t]>y[t]):
		print(x[t])
		t=t+1
	else:
		print(y[t])
		t=t+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:35:42) 
-- CODE:
from numpy import*
y=array(eval(input("Digtie um vetor: ")))
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
t=0		
while((len(x))>t):
	if(m[t]>y[t]):
		print(m[t])
		t=t+1
	else:
		print(y[t])
		t=t+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:36:07) 
-- CODE:
from numpy import*
y=array(eval(input("Digtie um vetor: ")))
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
t=0		
while((len(x))>t):
	if(m[t]>y[t]):
		print(m[t])
		t=t+1
	else:
		print(y[t])
		t=t+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 18:36:09) 
-- CODE:
from numpy import*
y=array(eval(input("Digtie um vetor: ")))
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
t=0		
while((len(x))>t):
	if(m[t]>y[t]):
		print(m[t])
		t=t+1
	else:
		print(y[t])
		t=t+1
		
-- EXECUTION TIME:
0.447914
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 19:42:42) 
-- CODE:
from numpy import*
y=array(eval(input("Digtie um vetor: ")))
x=array(eval(input("Digite um vetor: ")))
i=0
u=-1
h=1
m=zeros(len(x),dtype=int)
if(len(x)%2==0):
	while(len(x)>h):
		m[i]=x[u]
		m[u]=x[i]
		h=h+1
		i=i+1
		u=u-1
else:
	h=0
	l=len(x)
	b=len(x)//2
	while(b>h):
		m[i]=x[u]
		m[u]=x[i]
		m[b]=x[b]
		h=h+1
		i=i+1
		u=u-1
t=0		
while((len(x))>t):
	if(m[t]>y[t]):
		print(m[t])
		t=t+1
	else:
		print(y[t])
		t=t+1
		
-- EXECUTION TIME:
0.509666
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
